--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
             <ul class="nav pull-right">
               <li><%= link_to "All Orders", root_path, sort: nil, reverse: nil %></li>
               <li><%= link_to "New Order", new_order_path%>
-              <li><%= link_to "Totals", action:'total' %></li>
+              <li><%= link_to "Totals", action:'total', controller: 'orders' %></li>
               <li><%= link_to "Search", search_path %></li>
             </ul>
           </nav>
