--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,30 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
+
+    <%= form_for(@user, :html => {class: "form-horizontal"}) do |f| %>
+
+    	<div class="control-group">
+			<%= f.label :name, "Name:", class: "control-label"%>
+			<div class="controls">
+			<%= f.text_field :name, {placeholder: ''}%>
+			</div>
+			</div>
+
+			<div class="control-group">
+			<%= f.label :password, "Password:", class: "control-label"%>
+			<div class="controls">
+			<%= f.password_field :password, {placeholder: '' }%>
+			</div>
+			</div>
+
+			<div class="control-group">
+			<%= f.label :password_confirmation, "Confirmation:", class: "control-label"%>
+			<div class="controls">
+			<%= f.password_field :password_confirmation, {placeholder: '' }%>
+			</div>
+			</div>
+
+      <div class="control-group"><div class="controls">
+	<%= submit_tag("Create my account", {:class => "btn btn-primary"})%>
+	</div></div>
+    <% end %>
