--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -157,3 +157,17 @@ dd, dt, dl{
 .input-append .add-on, .input-prepend .add-on {
   width: 50
 }
+
+#error_explanation {
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors, .field_with_errors:before, .field_with_errors:after {
+  @extend .control-group;
+  @extend .error;
+  display: inline !important;
+}
