--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 <h1>Sign up</h1>
 
     <%= form_for(@user, :html => {class: "form-horizontal"}) do |f| %>
+    <%= render 'shared/error_messages_users' %>
 
     	<div class="control-group">
 			<%= f.label :name, "Name:", class: "control-label"%>
