--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
     <%= render 'shared/error_messages_users' %>
 
     	<div class="control-group">
-			<%= f.label :name, "Name:", class: "control-label"%>
+			<%= f.label :name, "Username:", class: "control-label"%>
 			<div class="controls">
 			<%= f.text_field :name, {placeholder: ''}%>
 			</div>
