--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,11 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
+          <%if signed_in? %>
+          <%= link_to "disc orders [#{current_user.name}]", root_path, id: "logo" %>
+          <% else %>
           <%= link_to "disc orders", root_path, id: "logo" %>
+          <% end %>
           <nav>
             <ul class="nav pull-right">
               <%if signed_in? %>
