--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,8 +4,7 @@
 <ul class="users">
   <% @users.each do |user| %>
     <li>
-      <%= gravatar_for user, size: 52 %>
-      <%= link_to user.name, user %>
+      <%= user.name %>
     </li>
   <% end %>
 </ul>
