--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
             <ul class="nav pull-right">
               <%if signed_in? %>
               <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
-              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to "All Users", users_path %></li>
               <% else %>
               <li><%= link_to "Sign in", signin_path %></li>
               <% end %>
