--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,9 @@
 <li>
+  <% if user.admin? %>
+  <%= "#{user.name}, admin" %>
+  <%else%>
   <%= user.name %>
+  <%end%>
   <% if current_user.admin? ^ current_user?(user) %>
     | <%= link_to "delete", user, method: :delete,
                                   data: { confirm: "You sure?" } %>
