--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,13 +4,17 @@
 
 <table class = "table table-border table-hover">
   <tr>
-    <th><%= link_to 'Name', params.merge({action: 'index', sort: 'name', reverse: !(params[:reverse]=="true")}) %></th>
-    <th><%= link_to 'Bunk', params.merge({action: 'index', sort: 'bunk', reverse: !(params[:reverse]=="true")}) %></th>
+    <th><%= link_to(params.merge({action: 'index', sort: 'name', reverse: !(params[:reverse]=="true")})) do %>
+        Name <i class=<%= if params[:sort]=='name' && !params[:reverse].nil? ; params[:reverse]=='true' ? "icon-chevron-up" : "icon-chevron-down" end%> ></i><%end%></th>
+    <th><%= link_to(params.merge({action: 'index', sort: 'bunk', reverse: !(params[:reverse]=="true")})) do %>
+        Bunk <i class=<%= if params[:sort]=='bunk' && !params[:reverse].nil? ; params[:reverse]=='true' ? "icon-chevron-up" : "icon-chevron-down" end%> ></i><%end%></th>
     <th>White</th>
     <th>Orange</th>
     <th>Blue</th>
-    <th><%= link_to 'Paid/Due', params.merge({action: 'index', sort: 'paid', reverse: !(params[:reverse]=="true")}) %></th>
-    <th><%= link_to 'Received', params.merge({action: 'index', sort: 'received', reverse: !(params[:reverse]=="true")}) %></th>
+    <th><%= link_to(params.merge({action: 'index', sort: 'paid', reverse: !(params[:reverse]=="true")})) do %>
+        Paid/Due <i class=<%= if params[:sort]=='paid' && !params[:reverse].nil? ; params[:reverse]=='true' ? "icon-chevron-up" : "icon-chevron-down" end%> ></i><%end%></th>
+    <th><%= link_to(params.merge({action: 'index', sort: 'received', reverse: !(params[:reverse]=="true")})) do %>
+        Received <i class=<%= if params[:sort]=='received' && !params[:reverse].nil? ; params[:reverse]=='true' ? "icon-chevron-up" : "icon-chevron-down" end%> ></i><%end%></th>
     <th id = "links"></th>
     <th id = "links"></th>
     <th id = "links"></th>
@@ -33,18 +37,17 @@
     <td><%= link_to received_word, order_path(order, :order => { :received => !order.received}, :old_params => old_params), :method => :put%></td>
     <td>
         <div class="btn-group">
-  <%= link_to(order, class: "btn btn-primary") do%>
-  <i class="icon-user icon-white"></i> View
+    <%= link_to(order, class: "btn btn-primary") do%>
+        <i class="icon-user icon-white"></i> View
     <% end %>
-  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-  <ul class="dropdown-menu">
-    <li><%= link_to(edit_order_path(order)) do %>
-    <i class="icon-pencil"></i> Edit
-    <% end %></li>
-    <li><%= link_to(order, method: :delete, data: { confirm: 'Are you sure?' }) do%>
-    <i class="icon-trash"></i> Delete
-    <% end %>
-    </li>
+    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+    <ul class="dropdown-menu">
+        <li><%= link_to(edit_order_path(order)) do %>
+            <i class="icon-pencil"></i> Edit
+        <% end %></li>
+        <li><%= link_to(order, method: :delete, data: { confirm: 'Are you sure?' }) do%>
+            <i class="icon-trash"></i> Delete
+        <% end %></li>
   </ul>
 </div>
     </td>
