--- a/app/views/orders/search.html.erb
+++ b/app/views/orders/search.html.erb
@@ -24,7 +24,7 @@
 
   <br>
   <%= submit_tag("Search", {:class => "btn btn-primary"}) %>
-  <%= link_to 'Back', root_path %>
+  <%= link_to "Back", root_path, class: "btn"%>
   	</div>
 </div>
 <% end %>
