--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,9 @@
             <ul class="nav pull-right">
               <%if signed_in? %>
               <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+              <% if current_user.admin? %>
               <li><%= link_to "All Users", users_path %></li>
+              <%end%>
               <% else %>
               <li><%= link_to "Sign in", signin_path %></li>
               <% end %>
