layout change header

--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -83,7 +83,8 @@ td.show_bold, label.show_bold{
   box-sizing: border-box;
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
-  padding-right: 520px;
+  padding-right: 400px;
+  padding-left:35px;
   width: 100%;
   min-width:100;
   &:hover {
