--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "application" %>
 <%= form_for(@order, :html => {class: "form-horizontal"}) do |f| %>
 <%= render 'shared/error_messages' %>
 	<div class="control-group">
@@ -47,7 +48,7 @@
 
 	<div class="control-group">
 	<% paid_cache = @order.paid.nil? || @order.paid %>
-	<%= f.label :paid, "Paid", class: "control-label"%>
+	<%= f.label :paid, "Paid ($#{@order.price})", class: "control-label"%>
 	<div class="controls">
 	<%= f.check_box :paid, {checked: paid_cache} %>
 	</div>
