--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,9 +4,9 @@
     %title= full_title(yield(:title))
     = stylesheet_link_tag    "application", media: "all"
     %script{:src => "//code.jquery.com/jquery-2.0.3.min.js"}
+    = javascript_include_tag "typeahead.bundle.js"
     = javascript_include_tag "application"
     = csrf_meta_tags
-    = minify_include "typeahead.js"
     / Latest compiled and minified CSS
     %link{href: "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css", rel: "stylesheet"}/
     / Latest compiled and minified JavaScript
