--- a/app/assets/javascripts/search.js.erb
+++ b/app/assets/javascripts/search.js.erb
@@ -4,7 +4,7 @@ var discs = new Bloodhound({
     },
     queryTokenizer: Bloodhound.tokenizers.whitespace,
     prefetch: {
-        url: "../data.json",
+        url: root_url + "/data.json",
         ttl: 1
     }
 }),
