--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -23,26 +23,31 @@
     <td><%= order.white %></td>
     <td><%= order.orange %></td>
     <td><%= order.blue %></td>
-    <td id = "<%= order.paid ? 'paid' : 'notpaid'%>">
-    <%= if order.paid
-    "$#{order.price}"
-    else
-    "Not Paid ($#{order.price})" end%></td>
-    <%received_word = order.received ?  "Yes" : 'No'%>
+    <td id = "paid">
+    <%= form_for order do |f| %>
+        <%= f.hidden_field :paid, value: !order.paid %>
+        <%= f.submit "$"+order.price.to_s, class: "btn btn-" + (order.paid ? "success" : "danger"), index: true %>
+    <% end %>
+    </td>
     <%old_params = params || {}%>
-    <td><%= link_to received_word, order_path(order, :order => { :received => !order.received}, :old_params => old_params), :method => :put%></td>
+    <td id = "received">
+    <%= form_for order do |f| %>
+        <%= f.hidden_field :received, value: !order.received %>
+        <%= f.submit (order.received ?  "Yes" : 'No'), class: "btn btn-" + (order.received ? "success" : "danger") +  (!order.paid ? " disabled" : ""), index: true%>
+    <% end %>
+    </td>
     <td>
         <div class="btn-group">
     <%= link_to(order, class: "btn btn-primary") do%>
-        <i class="icon-user icon-white"></i> View
+        <span class="glyphicon glyphicon-user"></span> View
     <% end %>
     <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
     <ul class="dropdown-menu">
         <li><%= link_to(edit_order_path(order)) do %>
-            <i class="icon-pencil"></i> Edit
+            <span class="glyphicon glyphicon-pencil"></span> Edit
         <% end %></li>
         <li><%= link_to(order, method: :delete, data: { confirm: 'Are you sure?' }) do%>
-            <i class="icon-trash"></i> Delete
+            <span class="glyphicon glyphicon-trash"></span> Delete
         <% end %></li>
   </ul>
 </div>
