--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,13 +1,13 @@
 !!!
 %html
   %head
+    = include_gon
     %title= full_title(yield(:title))
     / Latest compiled and minified CSS
     %link{href: "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css", rel: "stylesheet"}/
     = stylesheet_link_tag    "application", media: "all"
     %script{:src => "//code.jquery.com/jquery-2.0.3.min.js"}
     = javascript_include_tag "typeahead.bundle.js"
-    = javascript_include_tag "orders.js.coffee"
     = javascript_include_tag "application"
     = csrf_meta_tags
     / Latest compiled and minified JavaScript
