--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,10 @@
     = render 'layouts/header'
     .container
       - flash.each do |key, value|
-        = content_tag(:div, value, class: "alert alert-#{key}")
+        = content_tag(:div, value, class: "alert alert-#{key}") unless key == :notice
+      - if notice
+        .alert.alert-info= notice
       %div
         = yield
         = debug(params) if Rails.env.development?
+      
