--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,28 +4,30 @@
     <%= form_for(@user, :html => {class: "form-horizontal"}) do |f| %>
     <%= render 'shared/error_messages_users' %>
 
-    	<div class="control-group">
-			<%= f.label :name, "Username", class: "control-label"%>
-			<div class="controls">
-			<%= f.text_field :name, {placeholder: ''}%>
-			</div>
-			</div>
 
-			<div class="control-group">
-			<%= f.label :password, "Password", class: "control-label"%>
-			<div class="controls">
-			<%= f.password_field :password, {placeholder: '' }%>
-			</div>
-			</div>
+	 <div class="form-group">
+		<%= f.label :name, "Username", class: "col-sm-1"%>
+		<div class="col-sm-3">
+			<%= f.text_field :name, {placeholder: '', class: 'form-control'}%>
+		</div>
+	</div>
 
-			<div class="control-group">
-			<%= f.label :password_confirmation, "Confirmation", class: "control-label"%>
-			<div class="controls">
-			<%= f.password_field :password_confirmation, {placeholder: '' }%>
-			</div>
-			</div>
+	<div class="form-group">
+		<%= f.label :password, "Password", class: "col-sm-1"%>
+		<div class="col-sm-3">
+			<%= f.password_field :password, {placeholder: '', class: 'form-control' }%>
+		</div>
+	</div>
+ 
+
+	<div class="form-group">
+		<%= f.label :password_confirmation, "Password", class: "col-sm-1"%>
+		<div class="col-sm-3">
+			<%= f.password_field :password_confirmation, {placeholder: '', class: 'form-control' }%>
+		</div>
+	</div>
 
       <div class="control-group"><div class="controls">
-	<%= submit_tag("Create my account", {:class => "btn btn-primary"})%>
+	<%= submit_tag("Create my account", {:class => "btn btn-primary col-sm-offset-1"})%>
 	</div></div>
     <% end %>
