oranges pooh eli

--- a/app/views/orders/total.html.erb
+++ b/app/views/orders/total.html.erb
@@ -8,7 +8,7 @@
   <dd><%= @disc_total %></dd>
   <dt>Whites:</dt>
   <dd><%= @white_total %></dd>
-  <dt>Orange:</dt>
+  <dt>Oranges:</dt>
   <dd><%= @orange_total %></dd>
   <dt>Blues:</dt>
   <dd><%= @blue_total %></dd>
