--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,6 +62,27 @@ input.search-query {
     p {
         font-size: 18px;
     }
+    ul {
+        border-bottom: 2px whitesmoke solid;
+        li {
+            height: 25px;
+            overflow-x: hidden;
+        }
+        li:first-child {
+            width: 150px;
+        }
+        li:nth-child(2), li:nth-child(3), li:nth-child(4) {
+            width: 35px;
+        }
+        li.red{
+            color :#d9534f;
+            width: 50px;
+        }
+        li.green{
+            color: #5cb85c;
+            width: 50px;
+        }
+    }
 }
 .tt-suggestion.tt-cursor {
     color: #fff;
@@ -94,7 +115,7 @@ nav form.navbar-form {
             transition: width 0.3s ease;
             margin-right: 30px;
             &:focus {
-                width: 300px;
+                width: 370px;
             }
         }
     }
@@ -194,5 +215,127 @@ label.col-sm-1 {
             box-shadow: none;
             opacity: .65;
         }
+    }
+}
+
+
+.pagination ul {
+  display: inline-block;
+  padding-left: 0;
+  margin: 0px 0;
+  border-radius: 4px;
+}
+
+.pagination ul > li {
+  display: inline;
+}
+
+.pagination ul > li > a,
+.pagination ul > li > span {
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  margin-left: -1px;
+  line-height: 1.428571429;
+  text-decoration: none;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+}
+
+.pagination ul > li:first-child > a,
+.pagination ul > li:first-child > span {
+  margin-left: 0;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+.pagination ul > li:last-child > a,
+.pagination ul > li:last-child > span {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.pagination ul > li > a:hover,
+.pagination ul > li > span:hover,
+.pagination ul > li > a:focus,
+.pagination ul > li > span:focus {
+  background-color: #eeeeee;
+}
+
+.pagination ul > .active > a,
+.pagination ul > .active > span,
+.pagination ul > .active > a:hover,
+.pagination ul > .active > span:hover,
+.pagination ul > .active > a:focus,
+.pagination ul > .active > span:focus {
+  z-index: 2;
+  color: #ffffff;
+  cursor: default;
+  background-color: #428bca;
+  border-color: #428bca;
+}
+
+.pagination ul > .disabled > span,
+.pagination ul > .disabled > span:hover,
+.pagination ul > .disabled > span:focus,
+.pagination ul > .disabled > a,
+.pagination ul > .disabled > a:hover,
+.pagination ul > .disabled > a:focus {
+  color: #999999;
+  cursor: not-allowed;
+  background-color: #ffffff;
+  border-color: #dddddd;
+}
+
+.pagination ul-lg > li > a,
+.pagination ul-lg > li > span {
+  padding: 10px 16px;
+  font-size: 18px;
+}
+
+.pagination ul-lg > li:first-child > a,
+.pagination ul-lg > li:first-child > span {
+  border-bottom-left-radius: 6px;
+  border-top-left-radius: 6px;
+}
+
+.pagination ul-lg > li:last-child > a,
+.pagination ul-lg > li:last-child > span {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.pagination ul-sm > li > a,
+.pagination ul-sm > li > span {
+  padding: 5px 10px;
+  font-size: 12px;
+}
+
+.pagination ul-sm > li:first-child > a,
+.pagination ul-sm > li:first-child > span {
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+}
+
+.pagination ul-sm > li:last-child > a,
+.pagination ul-sm > li:last-child > span {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+
+.circle{
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    display:inline-block;
+    margin-bottom: 2px;
+    &.white {
+        border: 1px black solid;
+    }
+    &.orange {
+        background: #F77713;
+    }
+    &.blue {
+        background: blue;
     }
 }
